test mercure, update and publish + suite config

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,6 @@
     </head>
     <body>
         {% block body %}{% endblock %}
-        <div id="app">test</div>
+        <div id="app"></div>
     </body>
 </html>
