--- a/templates/page/index.html.twig
+++ b/templates/page/index.html.twig
@@ -5,3 +5,12 @@
 {% block body %}
     
 {% endblock %}
+{% block javascripts %}
+    <script>
+        const eventSource = new EventSource("{{ mercure('https://example.com/my-private-topic')|escape('js') }}");
+        eventSource.onmessage = event => {
+            // Will be called every time an update is published by the server
+            console.log(JSON.parse(event.data).status);
+        }
+    </script>
+{% endblock %}
