--- a/frontend/src/assets/styles/bases/global.scss
+++ b/frontend/src/assets/styles/bases/global.scss
@@ -2,4 +2,28 @@ body {
     font-family: 'Nunito', sans-serif;
     background: linear-gradient(to right, $background-start, $background-end);
     margin: 0;
+    .navbar{
+        border-bottom: 1px solid rgba(255,255,255, 0.3);
+    }
+    
+}
+.scrollbar
+{
+    margin-left: 30px;
+    float: left;
+    height: 300px;
+    width: 65px;
+    overflow-y: scroll;
+    margin-bottom: 25px;
+    &::-webkit-scrollbar-track
+    {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        background-color: #F5F5F5;
+    }
+
+    &::-webkit-scrollbar
+    {
+        width: 6px;
+        background-color: #F5F5F5;
+    }
 }
