--- a/frontend/src/assets/styles/components/layout/header.scss
+++ b/frontend/src/assets/styles/components/layout/header.scss
@@ -92,9 +92,7 @@
                     left: 0; 
                   }
             }
-        }
-        &.active{
-            a{
+            &.router-link-active{
                 &:after {    
                     background: none repeat scroll 0 0 transparent;
                     bottom: 0;
@@ -109,5 +107,6 @@
                 }
             }
         }
+        
     }
 }
